RESOLVED FIXED 207834
Fix check-webkit-style errors related to AVFoundationSPI.h
https://bugs.webkit.org/show_bug.cgi?id=207834
Summary Fix check-webkit-style errors related to AVFoundationSPI.h
Peng Liu
Reported 2020-02-16 22:43:51 PST
Fix check-webkit-style errors related to AVFoundationSPI.h
Attachments
WIP patch (20.15 KB, patch)
2020-02-17 00:06 PST, Peng Liu
no flags
Soft-link headers can be included either in "file.h" or <file.h> (18.34 KB, patch)
2020-02-17 10:25 PST, Peng Liu
no flags
Patch (1.89 KB, patch)
2020-02-18 21:00 PST, Peng Liu
no flags
Updated follow-up patch to revert the change regarding header order (4.46 KB, patch)
2020-02-19 12:28 PST, Peng Liu
no flags
Peng Liu
Comment 1 2020-02-17 00:06:30 PST
Created attachment 390904 [details] WIP patch
Peng Liu
Comment 2 2020-02-17 10:25:35 PST
Created attachment 390932 [details] Soft-link headers can be included either in "file.h" or <file.h>
Radar WebKit Bug Importer
Comment 3 2020-02-17 13:19:19 PST
WebKit Commit Bot
Comment 4 2020-02-17 13:55:56 PST
Comment on attachment 390932 [details] Soft-link headers can be included either in "file.h" or <file.h> Clearing flags on attachment: 390932 Committed r256770: <https://trac.webkit.org/changeset/256770>
WebKit Commit Bot
Comment 5 2020-02-17 13:55:58 PST
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 6 2020-02-18 20:13:03 PST
Comment on attachment 390932 [details] Soft-link headers can be included either in "file.h" or <file.h> View in context: https://bugs.webkit.org/attachment.cgi?id=390932&action=review > Tools/ChangeLog:8 > + We need to use case-insensitive comparison to check whether the headers are alphabetically sorted in each header section. What? No! Who decided this? I do not agree that this should change. We aren’t switching to case-insensitive comparison. There are thousands or source files and they are sorted case sensitively. This needs to be rolled back.
Peng Liu
Comment 7 2020-02-18 20:49:03 PST
Comment on attachment 390932 [details] Soft-link headers can be included either in "file.h" or <file.h> View in context: https://bugs.webkit.org/attachment.cgi?id=390932&action=review >> Tools/ChangeLog:8 >> + We need to use case-insensitive comparison to check whether the headers are alphabetically sorted in each header section. > > What? No! Who decided this? I do not agree that this should change. > > We aren’t switching to case-insensitive comparison. There are thousands or source files and they are sorted case sensitively. This needs to be rolled back. Oh, sorry, you are right. I just reviewed the code style guidelines. That was done by mistake. Will reopen this bug and rollout this change.
Peng Liu
Comment 8 2020-02-18 20:50:44 PST
Reopen this bug to rollout the change regarding the headers ordering.
Peng Liu
Comment 9 2020-02-18 21:00:54 PST
Peng Liu
Comment 10 2020-02-19 12:28:04 PST
Created attachment 391190 [details] Updated follow-up patch to revert the change regarding header order
Daniel Bates
Comment 11 2020-02-19 14:33:29 PST
Comment on attachment 391190 [details] Updated follow-up patch to revert the change regarding header order r=me
WebKit Commit Bot
Comment 12 2020-02-19 16:57:31 PST
Comment on attachment 391190 [details] Updated follow-up patch to revert the change regarding header order Clearing flags on attachment: 391190 Committed r257003: <https://trac.webkit.org/changeset/257003>
WebKit Commit Bot
Comment 13 2020-02-19 16:57:33 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.