Fix check-webkit-style errors related to AVFoundationSPI.h https://bugs.webkit.org/show_bug.cgi?id=207834

Reviewed by Daniel Bates.

Source/WebCore:

No new tests, no functional change.

Revert the change in r256770 regarding the headers ordering.

* platform/graphics/avfoundation/objc/MediaPlaybackTargetPickerMac.mm:
* platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:

Tools:

Revert the change in r256770 regarding the headers ordering.
Headers in the same category should be in sorted order (case sensitive, as done by the command-line sort tool or the Xcode sort selection command).

* Scripts/webkitpy/style/checkers/cpp.py:
(check_include_line):


Canonical link: https://commits.webkit.org/220942@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257003 268f45cc-cd09-0410-ab3c-d52691b4dbfc