Tools/Scripts/webkitpy/style/checkers/cpp.py
@@ -3270,7 +3270,7 @@ def check_include_line(filename, file_extension, clean_lines, line_number, inclu
             if previous_header_type == _OTHER_HEADER:
                 if '<' in previous_line and '"' in line:
                     error(line_number, 'build/include_order', 4, 'Bad include order. Mixing system and custom headers.')
-                elif previous_line.strip().lower() > line.strip().lower():
+                elif previous_line.strip() > line.strip():
                     # This type of error is potentially a problem with this line or the previous one,
                     # so if the error is filtered for one line, report it for the next. This is so that
                     # we properly handle patches, for which only modified lines produce errors.
